HMQ Unmanaged/main/default/objects/Headlines__c/Headlines__c.object-meta.xml
<CustomObject>
    <label>Headlines</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Headlines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Headlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>