HMQ Unmanaged/main/default/objects/Headlines__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>